# godot-iroh-vectorwar

./: Cargo.toml  README.md
game_core/src/: client.rs  lib.rs  server.rs
game_logic/: Cargo.toml
game_logic/src/: game_state.rs  lib.rs
game_network/src/: client.rs  server.rs
godot/: main.gd  main.gd.uid  main.tscn  project.godot  remote_player.tscn
rust/: Cargo.toml
rust/src/: async_runtime.rs  client_button.rs  game_state.rs  lib.rs  player.rs  server_button.rs
