[workspace]
resolver = "3"
members = ["game_core", "rust"]


[workspace.dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", rev = "e780ff2fd69225d6a3313906e6cdfe9111627aeb", features = ["api-4-6", "experimental-threads"]}
bytes = "1.11.1"
quinn = "0.11.9"
rcgen = "0.14.7"
tokio = { version = "1.50", features = ["full", "tracing"] }
async-channel = "2.5.0"
rkyv = "0.8.15"
hecs = "0.11"
console-subscriber = "0.5"